--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <img src="./assets/icons/plus.svg" alt="plus">
                         <img src="./assets/icons/plus.svg" alt="plus">
                         <img src="./assets/icons/plus.svg" alt="plus">
-                        <div>
+                        <div class="plus-modal">
                             <p>Impact resistant</p>
                             <p>Designed to handle life on the go.</p>
                         </div>
