--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
         </section>
-        <div class="premium-section">
+        <section class="premium-section">
             <div class="container">
                 <div class="premium-design">
                     <div class="premium-design__top">
@@ -113,11 +113,23 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section class="batters">
+            <div class="container">
+                <div class="batters-main">
+                    <div class="batters-main__title">
+                        <h2>Up to 20 hours battery life</h2>
+                        <p>Enjoy up to 20 hours of listening, enough time to pore through this entire playlist. So you can keep the music — or the quiet — going all day long. And when it finally runs down, a quick 15-minute charge gives you another 2.5 hours. </p>
+                    </div>
+                    <div class="batters-main__img">
+                        <img src="./assets/images/guy 1.png" alt="foto">
+                        <img src="./assets/images/battery.png" alt="foto">
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
-
-
-<!-- Github uchun -->
